viewer: add package.json and move under training/viewer/
To build do:

  npm install

To run:

  npm start

  or

  node ./server.js

--- a/training/viewer/index.html
+++ b/training/viewer/index.html
@@ -1,10 +1,14 @@
   <!--
       1st serve e.g. via http_server .
       (npm install -g http_server)
+      or
+      node ./server.js
+      or
+      npm start
 
       2nd go to:
 
-        http://127.0.0.1:8080/glimpse-viewer.html?dir=foo&frame=0
+        http://127.0.0.1:8080?dir=foo&frame=0
 
         @dir = subdirectory with training data
         @frame = frame number to look at
